<resources>
    <!--<string name="app_name">Promoo</string>-->

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Configurações</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Connection-->
    <string name="connection_error">Problema com a conexão. Conecte e tente novamente!</string>
    <string name="connection_fail">Houve uma falha nos nossos servidores, tente novamente.</string>
    <string name="label_no_alarm">Nenhum alarme configurado no momento!</string>
    <string name="label_no_places">Você não tem nenhum lugar adicionado ainda!</string>


    <string name="label_monday">SEG</string>
    <string name="label_tuesday">TER</string>
    <string name="label_wednesday">QUA</string>
    <string name="label_thursday">QUI</string>
    <string name="label_friday">SEX</string>
    <string name="label_saturday">SAB</string>
    <string name="label_sunday">DOM</string>
    <string name="label_mark_all">Marcar todos</string>
    <string name="label_unmark_all">Desmarcar todos</string>
    <string name="label_repeat">Repetir</string>
    <string name="label_date_start">A partir de</string>
    <string name="label_date_end">Data final</string>
    <string name="label_interval_start">Horário</string>
    <string name="label_interval_end">Intervalo de</string>
    <string name="label_hint_date">00/00/00</string>
    <string name="label_hint_hour">00:00</string>
    <string name="label_define_place">Defina um lugar</string>
    <string name="label_my_places">Meus lugares</string>
    <string name="label_new_places">Novo lugar</string>
    <string name="label_distance_edit">Raio: %s</string>
    <string name="label_summary">A partir de %s\nDe: %s válido por %s min\nRepete: %s\nLugar: %s\nRaio: %s metros</string>
    <string name="label_summary_item">Hora: %s \nRepete: %s\nLugar: %s</string>
    <string name="label_save">Salvar</string>
    <string name="title_new_alarm">Configurar Alarme</string>
    <string name="label_confirm">Confirmar</string>
    <string name="label_cancel">Cancelar</string>
    <string name="title_distance">Distância</string>
    <string name="str_query_contains">Select * from %s where %s = \'%s\'</string>
    <string name="label_hour_init">1 hora</string>
    <string name="str_size_parameter">400x400</string>
    <string name="str_https_parameter">https</string>
    <string name="str_authority_parameter">maps.googleapis.com</string>
    <string name="str_maps_parameter">maps</string>
    <string name="str_api_parameter">api</string>
    <string name="str_staticmaps_parameter">staticmap</string>
    <string name="str_center_parameter">center</string>
    <string name="str_zoom_parameter">zoom</string>
    <string name="str_size_label_parameter">size</string>
    <string name="str_key_parameter">key</string>
    <string name="str_lat_lng">%f,%f</string>
    <string name="str_geo">geo:%f,%f</string>
    <string name="lavel_place_exists">Você já adicionou este lugar</string>
    <string name="label_title_places_exists">Ops!</string>
    <string name="str_google_uri">com.google.android.apps.maps</string>
    <string name="title_attention">Atenção</string>
    <string name="label_cimate">%s%s, %.1fº</string>
    <string name="label_error_dialog_alarm">Por favor preencha data e hora do seu alarme</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Você está próximo ao seu local.
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="str_init_distance">500mts</string>
    <string name="title_alarm_tab">Alarme</string>
    <string name="title_places_tab">Meus lugares</string>
    <string name="label_no_location">Sem repetição</string>
    <string name="label_no_location_summary">Sem localização</string>
    <string name="label_content_maps">Isso é um mapa</string>
</resources>
