<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    app:columnCount="2"
    app:rowCount="8">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/regular_space_two"
        android:gravity="start|center_vertical"
        android:text="@string/label_date_start"
        android:textStyle="bold"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/regular_space_two"
        android:gravity="start|center_vertical"
        android:text="@string/label_date_end"
        android:textStyle="bold"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/tv_date_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/regular_space_two"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/drawable_line_bottom"
        android:clickable="true"
        android:drawablePadding="@dimen/regular_space_one"
        android:drawableStart="@android:drawable/ic_menu_my_calendar"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:gravity="start|center_vertical"
        android:text="@string/label_hint_date"
        android:textColor="@color/gray_light"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/tv_date_end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_space_two"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/drawable_line_bottom"
        android:clickable="true"
        android:drawablePadding="@dimen/regular_space_one"
        android:drawableStart="@android:drawable/ic_menu_my_calendar"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:gravity="start|center_vertical"
        android:text="@string/label_hint_date"
        android:textColor="@color/gray_light"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="start|center_vertical"
        android:text="@string/label_interval_start"
        android:textStyle="bold"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="start|center_vertical"
        android:text="@string/label_interval_end"
        android:textStyle="bold"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />


    <TextView
        android:id="@+id/tv_hour_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/regular_space_two"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/drawable_line_bottom"
        android:clickable="true"
        android:drawablePadding="@dimen/regular_space_one"
        android:drawableStart="@android:drawable/ic_menu_recent_history"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:gravity="start|center_vertical"
        android:text="@string/label_hint_hour"
        android:textColor="@color/gray_light"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/tv_hour_end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/regular_space_two"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/drawable_line_bottom"
        android:clickable="true"
        android:drawablePadding="@dimen/regular_space_one"
        android:drawableStart="@android:drawable/ic_menu_recent_history"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:gravity="start|center_vertical"
        android:text="@string/label_hint_hour"
        android:textColor="@color/gray_light"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />


</android.support.v7.widget.GridLayout>